--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.172",
+    "@types/styled-components": "^5.1.13",
+    "axios": "^0.21.1",
+    "colord": "^2.7.0",
+    "firebase": "^9.0.1",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
+    "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.4",
+    "react-redux": "^7.2.4",
+    "react-textarea-autosize": "^8.3.3",
+    "react-toastify": "^8.0.2",
+    "redux": "^4.1.1",
+    "reselect": "^4.0.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "4.4.2"
+    "typescript": "4.4.2",
+    "utility-types": "^3.10.0"
   }
 }
