--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
     "react-redux": "^7.2.4",
+    "react-responsive-masonry": "^2.1.3",
     "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
