--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "11.1.2",
     "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
+    "react-colorful": "^5.4.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
     "react-redux": "^7.2.4",
