--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-colorful": "^5.4.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
+    "react-firebase-hooks": "^3.0.4",
     "react-redux": "^7.2.4",
     "react-responsive-masonry": "^2.1.3",
     "react-textarea-autosize": "^8.3.3",
