--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.0.1",
     "lodash": "^4.17.21",
     "next": "11.1.2",
+    "next-seo": "^4.26.0",
     "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
     "react-colorful": "^5.4.0",
