--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "11.1.2",
     "next-seo": "^4.26.0",
     "nextjs-progressbar": "^0.0.11",
+    "nodemailer": "^6.6.5",
     "react": "17.0.2",
     "react-colorful": "^5.4.0",
     "react-dom": "17.0.2",
